2020-07-16  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WTF] Remove the unnecessary inner class DefaultHash<T>::Hash
        https://bugs.webkit.org/show_bug.cgi?id=214389

        Reviewed by Darin Adler.

        * pal/SessionID.h:

2020-07-16  Eric Carlson  <eric.carlson@apple.com>

        Use AVRoutePickerView when available for choosing AirPlay devices
        https://bugs.webkit.org/show_bug.cgi?id=213497
        <rdar://problem/58610662>

        Reviewed by Jer Noble.

        * pal/cocoa/AVFoundationSoftLink.h:
        * pal/cocoa/AVFoundationSoftLink.mm: Soft link AVRoutePickerView.
        * pal/spi/cocoa/AVKitSPI.h: Declare AVRoutePickerView.

2020-07-16  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Add MediaCapabilities support for SW VP9 decoder.
        https://bugs.webkit.org/show_bug.cgi?id=214316

        Reviewed by Eric Carlson.

        * pal/spi/cocoa/IOPSLibSPI.h:

2020-07-16  Jonathan Bedard  <jbedard@apple.com>

        [Big Sur] De-duplicate SPI
        https://bugs.webkit.org/show_bug.cgi?id=214415
        <rdar://problem/65678060>

        Reviewed by Darin Adler.

        * pal/spi/mac/NSImageSPI.h:

2020-07-16  Jonathan Bedard  <jbedard@apple.com>

        [Big Sur] Build on Seed 1 (Follow-up Fix)
        https://bugs.webkit.org/show_bug.cgi?id=214396
        <rdar://problem/65644762>

        Unreviewed follow-up fix.

        * pal/spi/cg/CoreGraphicsSPI.h:

2020-07-16  Jonathan Bedard  <jbedard@apple.com>

        [Big Sur] Build on Seed 1
        https://bugs.webkit.org/show_bug.cgi?id=214396
        <rdar://problem/65644762>

        Reviewed by Tim Horton.

        * pal/spi/cg/CoreGraphicsSPI.h: Add CoreGraphics SPI for PDFKIT_PLUGIN.
        * pal/spi/mac/NSImageSPI.h:

2020-07-15  Saagar Jha  <saagar@saagarjha.com>

        Add some missing boilerplate to help fix build on macOS Big Sur
        https://bugs.webkit.org/show_bug.cgi?id=214338

        Reviewed by Darin Adler.
