@@ -228,12 +228,9 @@ NS_ASSUME_NONNULL_END
 #endif // PLATFORM(MAC)
 
 #if ENABLE(WIRELESS_PLAYBACK_TARGET) && !PLATFORM(IOS_FAMILY)
-
 #if USE(APPLE_INTERNAL_SDK)
 
 #import <AVKit/AVOutputDeviceMenuController.h>
-#import <AVKit/AVRoutePickerView_Private.h>
-#import <AVKit/AVRoutePickerView_WebKitOnly.h>
 
 #else
 
@@ -255,6 +252,22 @@ NS_CLASS_AVAILABLE_MAC(10_11)
 
 @end
 
+NS_ASSUME_NONNULL_END
+
+#endif // USE(APPLE_INTERNAL_SDK)
+#endif // ENABLE(WIRELESS_PLAYBACK_TARGET) && !PLATFORM(IOS_FAMILY)
+
+#if HAVE(AVROUTEPICKERVIEW)
+#if USE(APPLE_INTERNAL_SDK)
+
+#import <AVKit/AVRoutePickerView.h>
+#import <AVKit/AVRoutePickerView_Private.h>
+#import <AVKit/AVRoutePickerView_WebKitOnly.h>
+
+#else
+
+NS_ASSUME_NONNULL_BEGIN
+
 @protocol AVRoutePickerViewDelegate;
 
 @interface AVRoutePickerView : NSView
@@ -275,8 +288,7 @@ NS_CLASS_AVAILABLE_MAC(10_11)
 NS_ASSUME_NONNULL_END
 
 #endif // USE(APPLE_INTERNAL_SDK)
-
-#endif // ENABLE(WIRELESS_PLAYBACK_TARGET) && !PLATFORM(IOS_FAMILY)
+#endif // HAVE(AVROUTEPICKERVIEW)
 
 NS_ASSUME_NONNULL_BEGIN
 
