@@ -1,3 +1,13 @@
+2020-07-16  Eric Carlson  <eric.carlson@apple.com>
+
+        Use AVRoutePickerView when available for choosing AirPlay devices
+        https://bugs.webkit.org/show_bug.cgi?id=213497
+        <rdar://problem/58610662>
+
+        Unreviewed build fix.
+
+        * pal/spi/cocoa/AVKitSPI.h:
+
 2020-07-16  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [WTF] Remove the unnecessary inner class DefaultHash<T>::Hash
